[package]
name = "ssh-to-age"
version = "0.1.1"
edition = "2024"
authors = ["wallago <henrotte.hugo@gmail.com>"]
description = "Convert OpenSSH Ed25519 keys to age encryption keys."
license = "Apache-2.0"
repository = "https://github.com/wallago/ssh-to-age-rs"
homepage = "https://github.com/wallago/ssh-to-age-rs"
documentation = "https://docs.rs/ssh-to-age"
readme = "README.md"
keywords = ["age", "ssh", "ed25519", "encryption", "sops"]
categories = ["cryptography"]
exclude = ["/.github", "/.gitignore", "/target"]

[dependencies]
anyhow = "1.0.98"
bech32 = "0.11.0"
curve25519-dalek = "4.1.3"
sha2 = "0.10.9"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
ed25519-dalek = "2.1.1"
